--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -1,8 +1,6 @@
 body {
-  padding-top: 50px;
-}
+  padding-top: 50px; }
 
-.starter-template {
-  padding: 40px 15px;
-  text-align: center;
-}
+canvas {
+  margin-top: 20px;
+  border: 1px solid black; }
