--- a/app/views/sass/main.scss
+++ b/app/views/sass/main.scss
@@ -2,7 +2,7 @@ body {
   padding-top: 50px;
 }
 
-.starter-template {
-  padding: 40px 15px;
-  text-align: center;
+canvas {
+  margin-top: 20px;
+  border: 1px solid black;
 }
