--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -1,6 +1,8 @@
 body {
   padding-top: 50px; }
 
-canvas {
+#editor {
+  width: 300px;
+  height: 400px;
   margin-top: 20px;
   border: 1px solid black; }
