--- a/app/views/sass/main.scss
+++ b/app/views/sass/main.scss
@@ -2,7 +2,10 @@ body {
   padding-top: 50px;
 }
 
-canvas {
+#editor {
+  width: 300px;
+  height: 400px;
+
   margin-top: 20px;
   border: 1px solid black;
 }
